Implement Amazon product extraction and login navigation in browser extension
Added functionality to handle Amazon product details extraction and saving to localStorage, login navigation process, and retrieving access token from Quantimodo. Introduced event listeners for clicks on the Context Menu, the extension button, and tab updates. New content scripts were added and permissions were updated in manifest.json. Enhanced background.js by creating context menu item and redirect function. This also includes storage logic for access token.

--- a/apps/browser-extension/popup.html
+++ b/apps/browser-extension/popup.html
@@ -7,6 +7,7 @@
 <body>
 <div class="content">
   <button id="recordButton" class="pretty-button">Click to Record Your Diet, Treatments, and Symptoms</button>
+  <button id="extractBtn">Extract Product Details</button>
 </div>
 <script src="popup.js"></script>
 </body>
