Add test setup for browser extension and sample HTML for Amazon page
This commit includes a setupTests.js for the browser extension, including clearing local storage and setting up fetch with insecure SSL. A sample amazon.html page is also included to enforce more robust testing scenarios. The HTML file contains basic setup and scripts.

--- a/apps/browser-extension/popup.html
+++ b/apps/browser-extension/popup.html
@@ -15,7 +15,7 @@
 <h2>Twin Safe</h2>
 
   <div class="">
-    <button id="recordButton" class="pretty-button">Click to Record Your Diet, Treatments, and Symptoms</button>
+    <button id="recordButton" class="pretty-button">Record Your Diet, Treatments, and Symptoms</button>
     <button id="amazonBtn" class="pretty-button">Import Amazon Data</button>
   </div>
 </div>
