Add S3 download script and enhance browser extension UI/UX
Implemented a new Node.js script to download files from S3, which checks for proper AWS environment variables and handles errors. For the Browser Extension, updated the popup.js to check existing tabs before opening new ones for Amazon. This aids in better user experience by avoiding duplicate tabs. Simplified the URL used for Amazon navigation across multiple scripts and styled the options.css for a better UI look. Tests and notifications for amazon purchases were also added.

--- a/apps/browser-extension/tests/amazon.html
+++ b/apps/browser-extension/tests/amazon.html
@@ -1044,7 +1044,7 @@
             </a>
 
 
-            <a href="/gp/css/order-history?ref_=nav_orders_first" class="nav-a nav-a-2   nav-progressive-attribute" id="nav-orders" tabindex="0">
+            <a href="/gp/css/order-history" class="nav-a nav-a-2   nav-progressive-attribute" id="nav-orders" tabindex="0">
               <span class="nav-line-1">Returns</span>
               <span class="nav-line-2">&amp; Orders<span class="nav-icon nav-arrow"></span></span>
             </a>
