Update notification text in browser extension options
Modified the text labels for the notification radio buttons in the options page of the browser extension to better represent their functionality. "Less Noticeable Background Notification" has been changed to "Less Noticeable Small Notification", and "Open Tab Immediately in Foreground" to "Open Full Inbox Immediately in Foreground", for more accurate description and improved user experience.

--- a/apps/browser-extension/options.html
+++ b/apps/browser-extension/options.html
@@ -25,13 +25,13 @@
       <div class="option">
         <label class="option-label">
           <input type="radio" name="behavior" value="popup" checked>
-          Less Noticeable Background Notification
+          Less Noticeable Small Notification
         </label>
       </div>
       <div class="option">
         <label class="option-label">
           <input type="radio" name="behavior" value="direct">
-          Open Tab Immediately in Foreground
+          Open Full Inbox Immediately in Foreground
         </label>
       </div>
       <div class="option">
