Update frequency options in browser extension
The options for frequency in the browser extension have been revamped to include intervals of every 4 hours and every 8 hours. This offers greater flexibility to users, allowing them to choose shorter or longer timeframes based on preference, with the default selection now being every 8 hours.

--- a/apps/browser-extension/options.html
+++ b/apps/browser-extension/options.html
@@ -39,6 +39,8 @@
         <select id="frequency" name="frequency" class="input-field">
           <option value="1">Every minute</option>
           <option value="60">Every hour</option>
+          <option value="240">Every 4 hours</option>
+          <option value="480">Every 8 hours</option>
           <option value="1440" selected>Once a day</option>
           <option value="10080">Once a week</option>
         </select>
